--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^5.2.2",
     "husky": "^1.3.1",
+    "immutable": "^4.0.0-rc.12",
     "jest": "^24.1.0",
     "sharp": "^0.21.3",
     "upath": "^1.1.0"
