chore(package): bump version to v0.1.0-alpha.1

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bazzite/nuxt-netlify",
-  "version": "0.1.0-alpha.0",
-  "description": "Automatically generates _headers and _redirects for Netlify in Nuxt.js projects.",
+  "version": "0.1.0-alpha.1",
+  "description": "Dynamically generate _headers and _redirects files for Netlify in your Nuxt.js projects.",
   "main": "lib/index.js",
   "directories": {
     "example": "example"
