--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "homepage": "https://www.bazzite.com/docs/nuxt-netlify/?utm_source=npm&utm_medium=readme&utm_campaign=nuxt-netlify",
   "dependencies": {
     "consola": "^2.11.3",
-    "fs-extra": "^8.1.0",
+    "fs-extra": "^9.0.0",
     "lodash.template": "^4.5.0"
   },
   "devDependencies": {
@@ -32,16 +32,16 @@
     "conventional-changelog-cli": "2.0.31",
     "eslint": "6.8.0",
     "eslint-config-dev": "2.0.0",
-    "eslint-config-standard": "13.0.1",
+    "eslint-config-standard": "14.1.1",
     "eslint-plugin-import": "2.20.2",
-    "eslint-plugin-jest": "22.21.0",
+    "eslint-plugin-jest": "23.8.2",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-standard": "4.0.1",
-    "eslint-plugin-vue": "5.2.3",
-    "husky": "3.1.0",
+    "eslint-plugin-vue": "6.2.2",
+    "husky": "4.2.3",
     "immutable": "4.0.0-rc.12",
-    "jest": "24.9.0",
+    "jest": "25.2.4",
     "sharp": "0.25.2",
     "upath": "1.2.0"
   },
@@ -55,5 +55,8 @@
     "testEnvironment": "node",
     "coverageDirectory": "./coverage/",
     "collectCoverage": true
+  },
+  "engines": {
+    "node": ">=10"
   }
 }
